--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body {
     text-align: center;
 }
+
+.col{
+    min-width: 150px;
+    width: 150px;
+    height: 150px;
+    border: 1px solid black;
+}
