--- a/css/MY_css/block-grid.css
+++ b/css/MY_css/block-grid.css
@@ -18,7 +18,7 @@ div[id|=block]{
 
     display: flex;          /*|centrare l'immagine nel blocco*/
     align-items: center;    /*|*/
-    
+    z-index: -1;
 }
 
 div[class|=row]{
