--- a/css/MY_css/popup-page.css
+++ b/css/MY_css/popup-page.css
@@ -5,12 +5,12 @@ body {
   .sidenav {
     height: 96%;
     border-radius:25px;
-    width: 250px;
+    width: 0;
     position: fixed;
-    display: none;
+    
     z-index: 1;
     top: 2%;
-    left: 2%;
+    left: 1.5%;
     background-color: #111;
     overflow-x: hidden;
     transition: 2s;
@@ -45,7 +45,7 @@ body {
         padding-top: 15px;
         border-radius: 25px 25px 0px 0px ;
         height: 50%;
-        width: 96%;
+        
         
         top: 50%;
 
