--- a/css/MY_css/block-grid.css
+++ b/css/MY_css/block-grid.css
@@ -22,8 +22,11 @@ div[id|=block]{
 }
 
 div[class|=row]{
+    
     display: flex;         
     flex-wrap: wrap;        
 }
 
-
+div[id|=block]:hover{
+    background-color: white!important;
+}
