--- a/css/MY_css/popup-page-prova.css
+++ b/css/MY_css/popup-page-prova.css
@@ -1,7 +1,5 @@
-body {
-    font-family: "Lato", sans-serif;
-  }
-  #mySidenav{
+
+  #pop-block{
       width: 100%;
       height: 100%;
       position: fixed;
@@ -10,7 +8,7 @@ body {
 
       
   }
-  .sidenav {
+  .info-pop {
     height: 96%;
     border-radius:25px;
     width: 0;
@@ -21,39 +19,38 @@ body {
     left: 1.5%;
     background-color: #111;
     overflow-x: hidden;
-    transition: 2s;
-    padding-top: 60px;
+    overflow-y: hidden;
+    transition: 1s;
+   
   }
   
-  .sidenav a {
-    padding: 8px 8px 8px 32px;
+  .info-pop a {
+    padding: 8px 8px 8px 8px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
     display: block;
-    transition: 0.3s;
+    
   }
   
-  .sidenav a:hover {
+  .info-pop a:hover {
     color: #f1f1f1;
   }
   
-  .sidenav .closebtn {
-    position: absolute;
-    top: 0px;
-    right:0px;
+  .info-pop .closebtn {
+    
     font-size: 36px;
-    margin-left: 50px;
+    text-align: end;
   }
   
 
   
   @media screen and (max-height: 900px) and (max-width: 425px){
-    .sidenav {
-        padding-top: 15px;
+    .info-pop {
         border-radius: 25px 25px 0px 0px ;
         top: 25%;
+        height: 75%;
 
     }
-    .sidenav a {font-size: 18px;}
+    .info-pop a {font-size: 18px;}
   }
