--- a/css/MY_css/block-grid.css
+++ b/css/MY_css/block-grid.css
@@ -3,6 +3,7 @@
 
 body{ 
     background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
 }
 
 
@@ -29,6 +30,25 @@ div[class|=row]{
     flex-wrap: wrap;  
 }
 
+/*Scrollbar personalizzata, magari da utilizzare*/
+/*
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+
+::-webkit-scrollbar-track {background: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+  
+ 
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+*/
 @media screen and (min-width: 768px){
     div[id|=block]:hover{
         background-color: white;
