--- a/css/MY_css/navbar.css
+++ b/css/MY_css/navbar.css
@@ -2,7 +2,8 @@
     text-align: center;
     color: aliceblue;
     font-size: 2vw;
-    
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
     background-color: #161b22;;
     align-items: center;
 }
@@ -15,7 +16,7 @@
 }
 
 #logo {
-    flex: 1 2 0px;
+    flex: 1 2 0%;
     
 }
 #logo > img{
@@ -24,35 +25,79 @@
 }
 
 .nav-btn{
-    margin: 0.5vw;
+    margin: 0px 5px;
     padding: 0.5vw;
     text-decoration: none;
-    border-radius: 50px;
-    border: 0.1vw solid white;
+    border-radius: 20px;
+    
     background-color: #24292f;
+    /*box-shadow: 2px 2px 5px 0px #4152634d;*/
+    color: rgb(255, 255, 255);
 }
 
 #home {
     flex: 0 1 auto;
     
+    display: flex;
 }
+
+
+#home > a:hover {
+    background-color:  #0348a8;
+    box-shadow: 2px 2px 5px 0px #4152634d;
+
+    color: #161b22;
+}
+#home > a{
+    flex: auto;
+    color: #ffffff;
+    background-image: linear-gradient(90deg, #405468a2, rgba(45, 58, 71, 0.507));
+   
+}
+
 
 #profile {
     flex: 0 1 auto;
     display: flex;
     flex-wrap:  nowrap;
+}
+
+
+#profile > .signup {
+    flex: 1 0 auto;
+    background-color: #6F8FAF;
+    background-image: linear-gradient(45deg, #6F8FAF, rgba(255, 255, 255, 0.507));
     
 }
 
-#profile > .signup {
-    flex: 0 0 auto;
+#profile > .signup:hover{
+    background-color:  #9bd400;
+    box-shadow: 2px 2px 5px 0px #4152634d;
+
+    color: #161b22;
 }
 
 #profile > .login {
-    flex: 0 0 auto;
+    flex: 1 0 auto;
+    background-color: #2d3a47;
+    background-image: linear-gradient(45deg, #06b497, rgba(0, 27, 49, 0.137));
 }
 
+#profile > .login:hover{
+    background-color:  #011c97;
+    box-shadow: 2px 2px 5px 0px #4152634d;
 
+    color: #000000;
+}
+
+#points{
+    background-color: #24292f00;
+}
+#username{
+    background-color: #4b5561;
+    color: aliceblue;
+}
+/*--------items da cellulare------------*/
 #dropup-btn {
     cursor: pointer;
     border-radius: 30px;
@@ -122,7 +167,9 @@
         flex-flow: column nowrap;
         width: 100%;
     }
-
+    .nav-btn{
+        margin: 2px 0px;
+    }
     #dropup-btn {
         display: block;
         background-color: rgb(0, 255, 234);
@@ -130,6 +177,9 @@
     }
     #dropup-btn:active{
         background-color: rgb(255, 255, 255);
+    }
+    #points{
+        background-color: #24292f;
     }
 }
 
