--- a/css/block-grid.css
+++ b/css/block-grid.css
@@ -22,8 +22,6 @@ div[id|=block]{
     
 }
 
-
-
 div[class|=row]{
     
     display: flex;         
@@ -37,7 +35,8 @@ div[class|=row]{
   }
   
 
-::-webkit-scrollbar-track {background: #000000; 
+::-webkit-scrollbar-track {
+    background: #000000; 
 }
 
 ::-webkit-scrollbar-thumb {
@@ -56,7 +55,8 @@ div[class|=row]{
         border: 0px;
         padding: 1px;
         transform: scale(1.1,1.1);
-        transition: transform 0.1s
+        transition: transform 0.75s;
+        cursor:pointer;
        
     }
     div[id|=block]:active{
@@ -68,5 +68,3 @@ div[class|=row]{
     }
     
 }
-
-
