--- a/css/block-grid.css
+++ b/css/block-grid.css
@@ -52,8 +52,8 @@ div[class|=row]{
 @media screen and (min-width: 768px){
     div[id|=block]:hover{
         background-color: white;
-        border: 0px;
-        padding: 1px;
+        /*border: 0px;
+        padding: 1px;*/
         transform: scale(1.1,1.1);
         transition: transform 0.75s;
         cursor:pointer;
