--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
-body {
+@import "navbar.css";
+@import "sign-up.css";
+/*@import "mobstyle.css" screen and (max-width: 768px);*/
+
+body{
     text-align: center;
     /*background-color: #4a4a4dea;*/
     /*background-image: url(../../../Backgrounds/19742.jpg); 
@@ -16,72 +20,4 @@ body {
     border: 1px solid black;
 }
 
-small {
-    color:red;
-}
-
-.error {
-    border-color: red;
-}
-
-.campoform {
-	margin-bottom: 0.75rem;
-}
-
-input {
-	border: solid 1px #ccc;
-	border-radius: 3px;
-	display: inline-block;
-	padding: 0.5rem 0.75rem;
-	font-family: inherit;
-	font-size: 1rem;
-}
-
-
-label {
-	display: inline-block;
-	margin-bottom: 5px;
-	vertical-align: top;
-	width: 100%;
-}
-
-
-.buttonSubmit {
-	background: #4d4d72;
-	color: #fff;
-	border-radius: 0.25rem;
-	font-size: 1rem;
-	font-weight: 400;
-	border: 1px solid #4d4d72;
-	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
-		box-shadow 0.15s ease-in-out;
-	text-align: center;
-	padding: 0.375rem 0.75rem;
-}
-
-.signin {
-    background-color: #f1f1f1;
-    max-width: 250px;
-    height: 50px;
-    padding: 10px;
-    text-align: center;
-  }
-
-
-#sicurezzaPassword {
-    display: none;
-    width: 72px;
-    height: 7px;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 5px;
-}
-
-div[id|=pass]{
-    width: 20px;
-    margin: 5px 1px 0px;
-    border: 1px solid rgba(128, 128, 128, 0.644);
-    height: 100%;
-}
 
