--- a/css/block-grid.css
+++ b/css/block-grid.css
@@ -49,7 +49,11 @@ div[class|=row]{
 }
 /*fine scrollbar personalizzata */
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 426px){
+    #grid{
+        margin-top: 12vw;
+    }
+
     div[id|=block]:hover{
         background-color: white;
         /*border: 0px;
