--- a/css/popup-page.css
+++ b/css/popup-page.css
@@ -29,7 +29,7 @@
 
 
 .info-pop a {
-  padding: 8px 8px 8px 8px;
+  
   display: block;
 
   text-decoration: none;
@@ -125,16 +125,82 @@ font-size: 30px;
   color:aliceblue;
 }
 
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 4; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+
+.modal-body {padding: 2px 16px;}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+
+
 
 
 /*--Responsiveness--*/
 @media screen and (max-height: 600px){
   .info-pop .closebtn{
-    font-size: 8px;
+    font-size: 10px;
+    padding: 8px;
   }
   .card-body{
     padding-bottom: 0.5rem!important;
     padding-top: 0rem!important;
+    
   }
   .card-title{
     font-size: 14px;
@@ -148,9 +214,7 @@ font-size: 30px;
     flex-direction: row;
     font-size: 15px;
   }
-  .not-logged.signup{
-    margin: 5px 10px 5px 0px;
-  }
+ 
   .card-footer{
     font-size: 10px;
   }
@@ -178,6 +242,7 @@ font-size: 30px;
 
   .info-pop .closebtn{
     font-size: 15px;
+    padding: 8px;
   }
 
 }
@@ -185,7 +250,7 @@ font-size: 30px;
 @media screen and (max-height: 915px) and (max-width: 425px){
   .info-pop {
       border-radius: 25px 25px 0px 0px ;
-      top: 25%;
+      top: 100%;
       height: 75%;
 
   }
