implementazione modal per pagamento e implementando acquisto blocco

--- a/css/popup-page.css
+++ b/css/popup-page.css
@@ -125,68 +125,62 @@ font-size: 30px;
   color:aliceblue;
 }
 
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 4; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
+/* purchase-confirm box*/
+#purchase-confirm {
+  display: none; 
+  position: fixed; 
+  z-index: 4; 
+  
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
 }
 
-/* Modal Content */
-.modal-content {
-  position: relative;
-  background-color: #fefefe;
-  margin: auto;
-  padding: 0;
-  border: 1px solid #888;
-  width: 80%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-  animation-name: animatetop;
+.confirm-content {
+  position: absolute;
+  bottom: 0;
+  color: white;
+  background-color: #1e252e;
+  font-style: Roboto;
+
+  width: 100%;
+  height: 20%;
+  animation-name: btoup;
   animation-duration: 0.4s
 }
 
 
-@keyframes animatetop {
-  from {top:-300px; opacity:0}
-  to {top:0; opacity:1}
+@keyframes btoup {
+  from {bottom:-300px; opacity:0}
+  to {bottom:0; opacity:1}
 }
 
-/* The Close Button */
-.close {
-  color: white;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+
+
+.confirm-header {
+  padding: 1vw;
+  background-color: #161b22;
+  
 }
 
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
+.confirm-body {padding: 1vw;}
+
+.confirm-body > div{text-align:right;}
+.confirm-body  ._btn {
+  width: 10%;
+  padding: 0.5vw 1vw;
+  border-radius: 0.5vw;
+  background-color: #8f8f8f;
+  border: 0px;
+}
+.confirm-body  ._btn:hover{
+  background-color: #8f8f8f5b;
 }
 
-.modal-header {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
-
-.modal-body {padding: 2px 16px;}
-
-.modal-footer {
-  padding: 2px 16px;
-  background-color: #5cb85c;
-  color: white;
-}
 
 
 
