--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,7 +5,7 @@
     font-size: 2vw;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
-    background-color: #161b22;;
+    background-color: #161b22;
     align-items: center;
 
    
