--- a/css/popup-page.css
+++ b/css/popup-page.css
@@ -29,11 +29,9 @@
 
 
 .info-pop a {
-  
   display: block;
-
   text-decoration: none;
-  font-size: 25px;
+  
 }
 
 .info-pop a:hover {
@@ -81,6 +79,7 @@ margin:10px;
 display: flex;
 flex-direction: column ;
 font-size: 30px;
+height: 100%;
 }   
 
 #buy-if > ._btn:hover{
@@ -121,7 +120,7 @@ font-size: 30px;
   border: 0px;
   box-shadow: 2px 2px  5px 1px rgba(27, 27, 27, 0.575);
   flex: 1 1 0%;
-
+  
   color:aliceblue;
 }
 
@@ -147,8 +146,6 @@ font-size: 30px;
   bottom: 0;
   color: white;
   background-color: #1e252e;
-  font-style: Roboto;
-
   width: 100%;
   height: 20%;
   animation-name: btoup;
