--- a/css/popup-page.css
+++ b/css/popup-page.css
@@ -43,6 +43,7 @@
   text-align: end;
   color: #818181;
 
+  flex: 1%;
 }
 
 /*| More deep in details*/
@@ -53,17 +54,30 @@
   background-image: linear-gradient(to bottom left, #111, #313131);
   border: 1px solid rgba(70, 70, 70, 0.507);
   border-radius: 25px;
+
+  display: flex;
+  flex-direction: column;
+}
+#container-block{
+  flex: 45%;
 }
 
 .card-img-top{
   margin: 0px auto 0px;
   max-width: 100%;
-  max-height: 100%;
+  height: 100%;
   object-fit: contain;
 
   box-shadow: 0px 0px  5px 5px rgba(17, 17, 17, 0.575);
   border-radius: 15px;
 }
+
+.card-body{
+  flex: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
 
 .card-market{
 display: flex; 
@@ -183,7 +197,9 @@ height: 100%;
   background-color: #8f8f8f5b;
 }
 
-
+.card-footer{
+  flex: 4%;
+}
 
 
 
