--- a/css/popup-page.css
+++ b/css/popup-page.css
@@ -70,6 +70,7 @@
 
   box-shadow: 0px 0px  5px 5px rgba(17, 17, 17, 0.575);
   border-radius: 15px;
+  background-color: #161b22cc;
 }
 
 .card-body{
