--- a/css/navbar.css
+++ b/css/navbar.css
@@ -21,9 +21,14 @@
     flex: 1 2 0%;
     
 }
+
 #logo > img{
     max-width:100%;
     padding:5%;
+}
+
+#logo > img:hover{
+    cursor: pointer;
 }
 
 .nav-btn{
@@ -37,33 +42,18 @@
     color: rgb(255, 255, 255);
 }
 
-#home {
-    flex: 0 1 auto;
-    
-    display: flex;
-}
-
-
-#home > a:hover {
-    background-color:  #0348a8;
-    box-shadow: 2px 2px 5px 0px #4152634d;
-
-    color: #161b22;
-}
-#home > a{
-    flex: auto;
-    color: #ffffff;
-    background-image: linear-gradient(90deg, #405468a2, rgba(45, 58, 71, 0.507));
-   
-}
-
 
 #profile {
     flex: 0 1 auto;
     display: flex;
-    flex-wrap:  nowrap;
+    flex-wrap: nowrap;
+    align-items: center;
 }
 
+#profile > i{
+    flex: 0 0 2%;
+    display: flex;
+}
 
 #profile > .signup {
     flex: 1 0 auto;
@@ -75,7 +65,6 @@
 #profile > .signup:hover{
     background-color:  #9bd400;
     box-shadow: 2px 2px 5px 0px #4152634d;
-
     color: #161b22;
 }
 
