--- a/css/block-grid-min.css
+++ b/css/block-grid-min.css
@@ -1,4 +1,7 @@
 @media screen and (max-width: 425px){
+    #grid {
+        margin: 10vh 0;
+    }
     div[id|=block]{
         min-width: 33.2%;
     }
