--- a/css/navbar.css
+++ b/css/navbar.css
@@ -90,10 +90,10 @@
 /*--------items da cellulare------------*/
 #dropup-btn {
     cursor: pointer;
-    border-radius: 30px;
+    border-radius: 10px;
     width:fit-content;
-    border: 2px solid black;
-    margin: 5px;
+    border: 1px solid rgb(63, 63, 63);
+    
     padding: 8px;
     display: none;
   }
@@ -101,7 +101,7 @@
 .bar1, .bar2, .bar3 {
     width: 25px;
     height: 3px;
-    background-color: rgb(94, 2, 180);
+    background-color: rgba(255, 255, 255, 0.801);
     margin: 4px 0;
     transition: 0.4s;
     
@@ -136,11 +136,7 @@
     .nav-menu{
         background-color: rgba(255, 255, 255, 0);
         font-size: 7vw;
-        
-        
-        
-        
-        
+
     }
     
     .visible{
@@ -151,8 +147,6 @@
         color: rgb(255, 255, 255);
         
         flex-flow: column nowrap;
-
-        
     }
 
     #logo{
@@ -183,11 +177,11 @@
     }
     #dropup-btn {
         display: block;
-        background-color: rgb(0, 255, 234);
+        background-color: #18263b;
         float: right;
     }
     #dropup-btn:active{
-        background-color: rgb(255, 255, 255);
+        opacity: 0.95;
     }
     #points{
         background-color: #24292f;
