--- a/css/popup-page.css
+++ b/css/popup-page.css
@@ -268,7 +268,7 @@ height: 100%;
       border-radius: 25px 25px 0px 0px ;
       top: 100%;
       height: 75%;
-
+      width: 97%;
   }
   .card{
     border-radius:25px 25px 0px 0px;
