--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,13 @@
 @import "sign-up.css";
 /*@import "mobstyle.css" screen and (max-width: 768px);*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
 
 body{
     font-family: 'Roboto', sans-serif;
 
 }
+
 .col{
     min-width: 150px;
     width: 150px;
