--- a/css/style.css
+++ b/css/style.css
@@ -22,3 +22,39 @@ body{
     }
 }
 
+
+/*FOOTER*/
+#footer{
+    background-color: #161b22;
+    text-align: center;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    border-top: 3px solid #06b497;
+}
+
+#footer-logo{
+    display: flex;
+}
+
+#footer-logo img{
+    margin-top: 10px;
+    flex-grow: 2;
+}
+
+#footer-logo img:hover{
+    cursor: pointer;
+}
+
+#footer-logo span{
+    flex: 2 2 auto;
+}
+
+.credits{
+    color: #ffffff;
+    font-weight: 100;
+    padding: 3px 0;
+    margin: 0;
+    flex-grow: 2;
+}
+
