--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,17 @@ body{
     }
 }
 
+/*TERMINI E CONDIZIONI*/
+
+#termini-servizio{
+    padding: 20px ;
+    font-weight: 500;
+    text-align: center;
+}
+
+#termini-servizio h2, #termini-servizio p{
+    font-weight: bold;
+}
 
 /*FOOTER*/
 #footer{
