--- a/css/profile.css
+++ b/css/profile.css
@@ -1,9 +1,20 @@
+#profile-list{
+    margin-top:14vw;
+}
+
 div[id|=myblock]{
     width: 100%;
-    height: 15vw;
+    height: 17vw;
     margin-right: 0 ;
+    padding: 1vw;
     
+    border-radius:15px ;
+    background-color: #5e5e5e18;
     
+    background-image: linear-gradient(-45deg, #5e5e5e18, rgba(0, 0, 0, 0.082));
+    
+    box-shadow: 0px 0px 10px 0px rgba(129, 129, 129, 0.384);
+    color: rgb(43, 43, 43);
 }
 div[id|=myblock]> div{
    
@@ -18,13 +29,52 @@ div[id|=myblock]  img{
 }
 div[id|=myvideo],div[id|=myimg],div[id|=mycolor]{
     padding: 0;
+    width: 15vw;
+    height: 15vw!important;
+    background-color: #000000;
+    border: 1px solid rgba(0, 0, 0, 0.144);
+    box-shadow: 0px 0px 10px 0px rgba(129, 129, 129, 0.384);
+    border-radius: 5px;
 }
 div[id|=myblock] > div[id|=info-myblock]{
-    overflow-y: scroll;
+    overflow-y: auto;
 }
+
+div[id|=info-myblock]::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+    
+  }
+  
+  
+
+  
+div[id|=info-myblock]::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+
+div[id|=info-myblock]::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+
 div[id|=modify-myblock]{
-    overflow-y: scroll;
     flex: 1;
+    align-items: center;
+    display: flex;
+    padding: 5px;
+}
+
+
+div[id|=modify-myblock] input{
+    background-color: rgba(255, 255, 255, 0.712);
+}
+div[id|=modify-myblock] textarea{
+    width: 100%;
+    border-radius: 0.5vw;
+    padding: 0.2vw;
+    border: 1px solid rgba(128, 128, 128, 0.555);
+   
 }
 
 #container{
@@ -33,6 +83,18 @@ div[id|=modify-myblock]{
 
 #container > h2{
     display: none;
+}
+.container-fluid{
+    padding: 0px 0px 0px 10px;
+}
+
+div[id|=formCol]  input{
+    width: 100%;
+}
+div[id|=formCol]  input[type=color]{
+    width: 100%;
+    padding: 2px;
+    
 }
 /*
 per la modifica
@@ -96,7 +158,9 @@ input:checked + .slider:before {
 }
 
 /*FINE PERSONALIZZAZIONE SWITCH*/
-
+div[id=modify-form] > label{
+    font-size: 1.5vw;
+}
 #divmodificablocco {
       display: flex;
       flex-direction: row;
@@ -114,9 +178,45 @@ input:checked + .slider:before {
 #submit-modify{
     float: right;
 }
-@media screen and (max-width: 470px){
+
+div[id|=myblock] input[type=submit] {
+    width: 100%;
+} 
+div[id|=myblock] input[type=submit]:hover{
+    background-color: rgba(185, 185, 185, 0.712);
+}
+
+@media screen and (max-width: 768px){
+    div[id=modify-form] > label{
+        font-size: 2vw;
+    }
+}
+@media screen and (max-width: 768px){
     #divmodificablocco {
         display: flex;
         flex-direction: column;
     }
+    div[id=modify-form] > label{
+        
+        font-size: 3.1vw;
+    }
 }
+@media screen and (max-width: 425px){
+    #profile-list{
+        margin-top:12vh;
+    }
+    #profile-list h3{
+        font-size: 16px;
+    }
+    
+    .container-fluid{
+        padding: 0;
+    }
+    
+    div[id=modify-form] > label{
+        vertical-align: middle;
+        
+    }
+}
+
+
