--- a/css/block-grid.css
+++ b/css/block-grid.css
@@ -6,7 +6,7 @@ body{
     overflow-x: hidden;
 }
 #grid {
-    background-color: #1eff00;
+    background-color: #ffffff;
     margin-bottom: 0;
 }
 
@@ -17,7 +17,7 @@ div[class|=row]{
 }
 
 div[id|=block]{
-    background-color: rgb(219, 92, 92);
+    
 
     border: 1px solid rgb(0, 0, 0);
     text-align: center;
@@ -37,9 +37,15 @@ img[id|=img]{               /*|Le immagini occupano il massimo dello spazio*/
     height: 100%;
     object-fit: cover;
 }
-
+div[id|=color]{
+   width: 100%;
+   height: 100%;
+}
 .owner_block{
     border: 1px solid #1eff00 !important;
+    background-color: #1eff00;
+}
+.owner_block > img, .owner_block >div{
     
     -webkit-mask-image:url(../assets/logos/mask.png);
     mask-image: url(../assets/logos/mask.png);
@@ -88,13 +94,13 @@ img[id|=img]{               /*|Le immagini occupano il massimo dello spazio*/
         background-color: rgb(63, 44, 44);
        
     }
-    .owner_block:hover{
+    .owner_block>img:hover,.owner_block>div:hover{
         border: 1px solid #1eff00 !important;
         
         -webkit-mask-image:url(../assets/logos/mask.png);
         mask-image: url(../assets/logos/mask.png);
         -webkit-mask-size: 150%;
-        mask-size: 150%;
+        mask-size: 200%;
         -webkit-mask-repeat: no-repeat;
         mask-repeat: no-repeat;  
     }
