--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,11 @@
 
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: #161b22;
+}
 
+.my-container{
+    background-color: white;
 }
 
 .col{
