--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,38 @@
+/*---------------------------------------------------------------------*/
+
+/*importazioni*/
 @import "navbar.css";
 @import "sign-up.css";
 /*@import "mobstyle.css" screen and (max-width: 768px);*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css');
+/*fine importazioni*/
 
-body{
-    font-family: 'Roboto', sans-serif;
-    background-color: #161b22;
-}
+/*---------------------------------------------------------------------*/
 
-.my-container{
-    background-color: white;
-    margin-top: 10vh;
-    padding: 2vw 0;
-
-}
-
+/*reset bootstrap*/
 .col{
     min-width: 150px;
     width: 150px;
     height: 150px;
     border: 1px solid black;
+}
+/*fine resetbootstrap*/
+
+/*---------------------------------------------------------------------*/
+
+/*template base*/
+body{
+    font-family: 'Roboto', sans-serif;
+    background-color: #161b22;
+    overflow-x: hidden;
+}
+
+.my-container{
+    background-color: white;
+    margin-top: 10vh;
+    padding: 2vw;
+
 }
 
 @media screen and (min-width: 426px){
@@ -28,9 +40,11 @@ body{
         margin-top: 12vw;
     }
 }
+/*fine template base*/
 
-/*TERMINI E CONDIZIONI*/
+/*---------------------------------------------------------------------*/
 
+/*termini e condizioni*/
 #termini-servizio{
     padding: 20px ;
     font-weight: 500;
@@ -41,7 +55,43 @@ body{
     font-weight: bold;
 }
 
-/*FOOTER*/
+@media screen and (max-width: 425px){
+
+    #footer-logo div{
+        margin-top: 10px;
+        flex: 2 2 0%;
+    }
+
+    #footer-logo span{
+        flex: 1 2 0%;
+    }
+}
+/*fine termini e condizioni*/
+
+/*---------------------------------------------------------------------*/
+
+/*Scrollbar personalizzata, magari da utilizzare*/
+body::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+
+body::-webkit-scrollbar-track {
+    background: #000000; 
+}
+
+body::-webkit-scrollbar-thumb {
+    background: #161b22; 
+}
+  
+body::-webkit-scrollbar-thumb:hover {
+    background: #2f3947; 
+}
+/*fine scrollbar personalizzata */
+
+/*---------------------------------------------------------------------*/
+
+/*footer*/
 #footer{
     background-color: #161b22;
     text-align: center;
@@ -73,35 +123,6 @@ body{
     padding: 3px 0;
     margin: 0;
 }
+/*fine footer*/
 
-@media screen and (max-width: 425px){
-
-    #footer-logo div{
-        margin-top: 10px;
-        flex: 2 2 0%;
-    }
-
-    #footer-logo span{
-        flex: 1 2 0%;
-    }
-}
-
-/*Scrollbar personalizzata, magari da utilizzare*/
-
-body::-webkit-scrollbar {
-    width: 10px;
-  }
-  
-
-body::-webkit-scrollbar-track {
-    background: #000000; 
-}
-
-body::-webkit-scrollbar-thumb {
-    background: #161b22; 
-}
-  
-body::-webkit-scrollbar-thumb:hover {
-    background: #2f3947; 
-}
-/*fine scrollbar personalizzata */
+/*---------------------------------------------------------------------*/
