--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -6,11 +6,12 @@
     flex: 3 0 0%;
     padding: 10px;
     margin: 4px;
-    height: 25%;
+    height: 100%;
     border-radius: 25px;
     border: 0px ;
     background-color: rgba(255, 255, 255, 0.863);
-    box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.39);
+    box-shadow: 0px 0px 3px 1px #161b2212;
+    
 }
 
 span.campoform{
@@ -85,12 +86,12 @@ div[id|=pass]{
 }
 
 
-.tooltip {
+.mytooltip {
     position: relative;
 
   }
   
-  .tooltip ~ .tooltiptext {
+  .mytooltip ~ .tooltiptext {
     visibility: hidden;
     width: 120px;
     background-color: black;
@@ -105,7 +106,7 @@ div[id|=pass]{
     margin-left: -60px;
   }
   
-  .tooltip ~ .tooltiptext::after {
+  .mytooltip ~ .tooltiptext::after {
     content: "";
     position: absolute;
     bottom: 100%;
@@ -116,6 +117,6 @@ div[id|=pass]{
     border-color: transparent transparent black transparent;
   }
   
-  .tooltip:focus ~ .tooltiptext {
+  .mytooltip:focus ~ .tooltiptext {
     visibility: visible;
   }
