--- a/css/modify.css
+++ b/css/modify.css
@@ -1,8 +1,44 @@
+#modify-selected.change{
+    padding: 2vw;
+    border-radius: 15px;
+    margin-top: 2vw;
+    background-color: rgba(204, 204, 204, 0.589);
+    
+    box-shadow: 0px 0px 2px 0px #00000085;
+    
+}
+
+
+#modify-selected  input{
+    background-color: azure;
+    border:  0px ;
+	border-radius: 10px;
+	display: inline-block;
+	padding: 0.5rem 0.75rem;
+	font-family: inherit;
+	font-size: 1rem;
+
+    width: 100%;
+
+}
+#modify-selected label{
+    display: inline-block;
+	margin-bottom: 5px;
+	vertical-align: top;
+	width: 100%;
+}
+
+#formCol-1 textarea{
+    width: 100%;
+    border: 0px;
+    border-radius: 10px;
+}
+
 /*INIZIO PERSONALIZZAZIONE SWITCH*/
 .switch {
     position: relative;
     display: inline-block;
-    width: 35px;
+    width: 35px !important;
     
 }
   
@@ -56,10 +92,17 @@ input:checked + .slider:before {
 }
 
 /*FINE PERSONALIZZAZIONE SWITCH*/
-
+#submit-modify{
+    margin-top: 2vw;
+    box-shadow: 0px 0px 1px 0px #00000085;
+}
+#submit-modify:hover{
+    background-color: #dbdbdb;
+}
 #divmodificablocco {
-      display: flex;
-      flex-direction: row;
+        display: flex;
+        flex-direction: row;
+        
 }
 
 .modifyForm-column{
