--- a/css/profile.css
+++ b/css/profile.css
@@ -18,10 +18,26 @@ div[id|=myblock]> div{
     height: 100%;
 }
 
+
 div[id|=myblock]  img{
     width: 100%;
     height: 100%;    
     object-fit: contain;
+}
+
+div[id|=myblock]  input{
+    border: solid 1px #ccc;
+	border-radius: 3px;
+	display: inline-block;
+	padding: 0.5rem 0.75rem;
+	font-family: inherit;
+	font-size: 1rem;
+}
+div[id|=myblock]  label{
+    display: inline-block;
+	margin-bottom: 5px;
+	vertical-align: top;
+	
 }
 
 div[id|=myvideo],div[id|=myimg],div[id|=mycolor]{
