--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -1,3 +1,43 @@
+#outer-main {
+    background-color: #202936af;
+    position: relative;
+    height: 100vw;
+}
+
+/* qua sopra prima c'era mycontainer*/
+
+
+#main-container {
+    margin: auto;
+    width: 85%;
+    border: 1px solid black;
+    border-radius: 20px;
+    display: flex;
+    background-color: rgb(255, 255, 255);
+    position: relative;
+    top: 25%;
+    height: fit-content;
+    box-shadow: 0 4px 10px 5px rgb(0 0 0 / 20%), 0 6px 20px 5px rgb(0 0 0 / 19%);
+}
+
+
+#container-logo-blocchi {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 40%;
+}
+
+
+#container-destra {
+    flex: 60%;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(207, 207, 207);
+    border-radius: 0px 20px 20px 0px;
+}
+
+
 .campoform > label{
     flex:1 1 5%;
     
@@ -10,7 +50,7 @@
     border-radius: 25px;
     border: 0px ;
     background-color: rgba(255, 255, 255, 0.863);
-    box-shadow: 0px 0px 3px 1px #161b2212;
+    box-shadow: 5px 5px 3px 1px #161b2212;
     
 }
 
@@ -18,13 +58,16 @@ span.campoform{
     flex: 0%;
     align-items: center;
     position:relative;
-    margin:5px;
+    margin:15px;
 }
 .campoform > input:focus-visible{
     border: 1px solid black;
 }
 .check_termini{
     text-align: center;
+    width: fit-content;
+    position: relative;
+    left: 40%;
 }
 
 .logo-blocchi > div {
@@ -35,8 +78,22 @@ span.campoform{
 }
 
 .buttonSubmit {
-    border-radius: 10vw;
-    margin: 10px;
+    border:none;
+    border-radius: 5px;
+    margin: 20px;
+    box-shadow: 0 8px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+    width: 25%;
+    position: relative;
+    background-color: #5b7caa;
+    left: 70%;
+    padding: 1%;
+    font-size: 20px;
+}
+
+.buttonSubmit:hover {
+    background-color: #202b3b;
+    color: white;
+
 }
 
 /*.campoform > small{
@@ -67,9 +124,10 @@ span.campoform{
     width: 72px;
     height: 7px;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
     margin-bottom: 5px;
+    position: relative;
+    bottom: 15%;
+    left: 3%;
 }
 
 div[id|=pass]{
@@ -94,14 +152,14 @@ div[id|=pass]{
   .mytooltip ~ .tooltiptext {
     visibility: hidden;
     width: 120px;
-    background-color: black;
+    background-color: rgb(94, 94, 94);
     color: #fff;
     text-align: center;
     border-radius: 6px;
     padding: 5px 0;
     position: absolute;
     z-index: 1;
-    top: 150%;
+    top: 120%;
     left: 50%;
     margin-left: -60px;
   }
@@ -120,3 +178,9 @@ div[id|=pass]{
   .mytooltip:focus ~ .tooltiptext {
     visibility: visible;
   }
+
+
+#footer {
+  position: fixed;
+  bottom: 0;
+}
