--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -13,7 +13,6 @@
 #main-container {
     margin: auto;
     width: 85%;
-
     border-radius: 20px;
     display: flex;
     background-color: rgb(255, 255, 255);
@@ -41,6 +40,10 @@
     background-image: linear-gradient(to right, rgb(255 255 255), rgb(200 201 204));
 }
 
+#container-destra h2{
+    margin-top: 4vh;
+    font-weight: 800;
+}
 
 .campoform > label{
     flex:1 1 15%;
