--- a/css/form.css
+++ b/css/form.css
@@ -130,7 +130,7 @@
 
 
 .form-bg{
-    background-image: url(../assets/19742.jpg);
+    background-image: url(../assets/form-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
