--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -2,11 +2,10 @@
     position: relative;
     padding-top: 17vw;
     padding-bottom: 8vw;
-    background-image: url(../assets/19742.jpg);
+    background-image: url(../assets/form-bg.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
-
 
 /* qua sopra prima c'era mycontainer*/
 
