--- a/css/popup-page.css
+++ b/css/popup-page.css
@@ -90,6 +90,10 @@
   margin:10px;
 }
 
+.placeholder-price > h1{
+  font-size: 25px;
+}
+
 /* signup button and login button ready to become buy and details button */
 #buy-if{
   display: flex;
@@ -97,6 +101,10 @@
   font-size: 25px;
   height: 100%;
 }   
+
+#buy-if > .logged{
+  padding: 6%;
+}
 
 #buy-if > ._btn:hover{
   background-image: linear-gradient(-45deg, #00366dec, #14035377);
