--- a/css/block-grid.css
+++ b/css/block-grid.css
@@ -1,5 +1,4 @@
 /*medium*/
-
 @media screen and (max-width: 912px){
     div[id|=block]{
         min-width: 16.6%;
@@ -14,12 +13,7 @@
     div[id|=block]{
         min-width: 33.2%;
     }
-    div[id|=block]:active{
-        border: 1px solid red;
-        padding: 0px;
-        background-color: rgb(253, 146, 146);
-       
-    }
+
 }
 
 /*standard*/
@@ -30,42 +24,39 @@
 }
 
 div[class|=row]{
-    
-    display: flex;         
-    flex-wrap: wrap;  
+    display: flex;
+    flex-wrap: wrap;
 }
 
 div[id|=block]{
-    
-
     border: 1px solid rgb(0, 0, 0);
     text-align: center;
-    /*max-width: 8.4%;*/    /*|Potrebbe ritornare utile in futuro*/
-    flex: 1 0 ;
-    
+    flex: 1 0 ;    
     aspect-ratio: 1 / 1;    /*|blocchi sempre di egual misura in altezza e larghezza*/
-
-    display: flex;          /*|centrare l'immagine nel blocco*/
-    align-items: center;    /*|*/
-    
 }
 
+div[id|=block]:active{
+    border: 1px solid #06b497;
+    padding: 0px;
+}
 
 img[id|=img]{               /*|Le immagini occupano il massimo dello spazio*/
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
+
 div[id|=color]{
    width: 100%;
    height: 100%;
 }
+
 .owner_block{
     border: 1px solid #1eff00 !important;
     background-color: #1eff00;
 }
+
 .owner_block > img, .owner_block >div{
-    
     -webkit-mask-image:url(../assets/logos/mask.png);
     mask-image: url(../assets/logos/mask.png);
     -webkit-mask-size: 100%;
@@ -80,25 +71,18 @@ div[id|=color]{
     }
 
     div[id|=block]:hover{
-        
         transform: scale(1.1,1.1);
         transition: transform 0.75s;
         cursor:pointer;
         z-index: 1;
     }
-    div[id|=block]:active{
-    
-        border: 1px solid red;
-        padding: 0px;
-        background-color: rgb(63, 44, 44);
-       
-    }
+
     .owner_block>img:hover,.owner_block>div:hover{
         border: 1px solid #1eff00 !important;
-        
         -webkit-mask-image:url(../assets/logos/mask.png);
         mask-image: url(../assets/logos/mask.png);
         -webkit-mask-size: 150%;
+        transition: 1s;
         mask-size: 150%;
         -webkit-mask-repeat: no-repeat;
         mask-repeat: no-repeat;  
